2008-09-05  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* scew, examples, check: lost ChangeLog details for 1.0.0rc1. See
	NEWS (API changes) for details.

**** Changes in version 0.4.0 ****

2007-10-11  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* attribute.c, attribute.h, element.c, element.h, xprint.c:
	added attribute parent. more documentation updates

2007-10-10  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* scew (Module): documentation improvements. fsf address updated

	* error.c, parser.c, parser.h, xparser.c, xparser.h: parser cleanup

	* Makefile.am, types.h, xelement.h, xparser.h, xtree.h:
	remove more unneeded files

	* xattribute.c, xattribute.h: xattribute.* removed

	* attribute.c, element.c, element.h, list.c:
	more memory fixes. xattribute.* removed

2007-10-09  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* Makefile.am: update libtool version

	* element.c, element.h: fix memory issues and improve element
	tests

	* scew (Module): initial changes for 1.0

**** Changes in version 0.3.2 ****

2004-05-23  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* scew (Module): Added stream functionality.

2004-03-20  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* by now just some minor fixes.

**** Changes in version 0.3.1 ****

2004-01-26  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* scew/writer.*: write functions moved from tree to new writer
	files.

2004-01-25  Aleix Conchillo Flaque  <aleix@member.fsf.org>

	* scew/xtree.*: added XML preamble support.

2003-12-09  Brodie Thiesfield

        * re-jigged the source tree to make building and installing as a
        common system library on Windows easier.

        * src directory renamed scew to keep consistency of code on
        both Unix and Windows platforms. Enables cross platform building
        of code always using #include <scew/scew.h>

        * added Windows DevStudio 6+ build workspace to easily build
        all required versions of the library.
